<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
		xmlns:android="http://schemas.android.com/apk/res/android"
		xmlns:tools="http://schemas.android.com/tools"
		xmlns:app="http://schemas.android.com/apk/res-auto"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:background="@drawable/login"
		tools:context="com.example.vicky.e_coin.signin">
	<TextView
			android:text=""
			android:textColor="@color/aqua"
			android:textSize="18pt"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			app:layout_constraintLeft_toLeftOf="parent" app:layout_constraintRight_toRightOf="parent"
			android:id="@+id/textView" app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="100dp"
			app:layout_constraintHorizontal_bias="0.498"/>
	<EditText
			android:layout_width="270dp"
			android:layout_height="wrap_content"
			android:inputType="textPersonName"
			android:background="@drawable/bg_edittext_focused"
			android:textAlignment="center"
			android:textColor="@color/red"
			android:textSize="10pt"
			android:hint="*e-mail Id"
			android:ems="10"
			app:layout_constraintLeft_toLeftOf="parent"
			app:layout_constraintRight_toRightOf="parent" android:id="@+id/mail" android:layout_marginTop="56dp"
			app:layout_constraintTop_toBottomOf="@+id/textView" app:layout_constraintHorizontal_bias="0.496"/>
	<EditText
			android:background="@drawable/bg_edittext_focused"
			android:textAlignment="center"
			android:textColor="@color/red"
			android:textSize="10pt"
			android:layout_width="270dp"
			android:layout_height="wrap_content"
			android:inputType="textPassword"
			android:hint="*Password"
			android:ems="10"
			app:layout_constraintLeft_toLeftOf="parent"
			app:layout_constraintRight_toRightOf="parent" android:id="@+id/pass" android:layout_marginTop="20dp"
			app:layout_constraintTop_toBottomOf="@+id/mail" app:layout_constraintHorizontal_bias="0.496"/>
	<Button
			android:text="Login"
			android:onClick="authenticate"
			android:layout_width="270dp"
			android:layout_height="wrap_content"
			android:background="@drawable/bg_aqua"
			android:id="@+id/signin"
			app:layout_constraintLeft_toLeftOf="parent"
			app:layout_constraintRight_toRightOf="parent" android:layout_marginBottom="20dp"
			app:layout_constraintBottom_toTopOf="@+id/signup" app:layout_constraintHorizontal_bias="0.496"/>
	<Button
			android:text="Signup"
			android:background="@drawable/bg_red"
			android:layout_width="270dp"
			android:layout_height="wrap_content"
			android:onClick="signup"
			android:id="@+id/signup"
			android:layout_marginTop="108dp" app:layout_constraintTop_toBottomOf="@+id/pass"
			app:layout_constraintLeft_toLeftOf="parent" android:layout_marginEnd="8dp"
			app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
			android:layout_marginStart="8dp" app:layout_constraintHorizontal_bias="0.496"/>
</android.support.constraint.ConstraintLayout>
