<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
		xmlns:android="http://schemas.android.com/apk/res/android"
		xmlns:tools="http://schemas.android.com/tools"
		xmlns:app="http://schemas.android.com/apk/res-auto"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		tools:context="com.example.vicky.e_coin.welcome"
		android:background="@drawable/welcome">


	<ImageView
			android:layout_width="145dp"
			android:layout_height="147dp" app:srcCompat="@drawable/touchid_main"
			app:layout_constraintTop_toTopOf="parent" app:layout_constraintBottom_toBottomOf="parent"
			app:layout_constraintLeft_toLeftOf="parent" app:layout_constraintRight_toRightOf="parent"
			android:id="@+id/imageView2"/>
	<pl.droidsonroids.gif.GifImageView
			android:layout_width="50dp"
			android:layout_height="50dp"
			android:src="@drawable/touchid_gf" app:layout_constraintLeft_toLeftOf="parent"
			app:layout_constraintTop_toTopOf="parent" app:layout_constraintBottom_toBottomOf="parent"
			app:layout_constraintRight_toRightOf="parent"
			app:layout_constraintVertical_bias="0.479"/>
	<!--<Button
			android:text="Button"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			app:layout_constraintLeft_toLeftOf="parent" app:layout_constraintRight_toRightOf="parent"
			android:id="@+id/welcome" android:layout_marginTop="8dp"
			app:layout_constraintTop_toBottomOf="@+id/imageView2"/>-->

</android.support.constraint.ConstraintLayout>
